# Ultimate-Plus

./: Cargo.toml  Labels.txt  README.md  Ultimate Plus.code-workspace  readme.txt
src/: consts.rs  ext.rs  helper.rs  imports.rs  lib.rs  offsets.rs  utils.rs
src/captain/: frame.rs
src/captain/acmd/: aerials.rs  ground.rs  mod.rs  smashes.rs  tilts.rs
src/captain/effect/: aerials.rs  mod.rs
src/captain/game/: aerials.rs  ground.rs  mod.rs  throws.rs  tilts.rs
src/captain/status/: SpecialSEnd.rs  mod.rs
src/common/: aerial.rs  airdodge.rs  attackair.rs  cancel.rs  cliff.rs  consts.rs  dacus.rs  dash.rs  ecb.rs  edge_cancel.rs  escape_air.rs  escape_air_slide.rs  frame.rs  function.rs  ground_movement.rs  hold_buffer.rs  jab.rs  jump_cancel.rs  landing.rs  ledge.rs  melee.rs  mod.rs  momentum_transfer.rs  movement.rs  param.rs  physics.rs  remove_quake.rs  run.rs  shield.rs  shine_cancel.rs  shinecancel.rs  wavedash.rs
src/common/cliff/: cliff_attack.rs  cliff_catch.rs  cliff_catch_move.rs  cliff_climb.rs  cliff_escape.rs  cliff_jump1.rs  cliff_jump2.rs  cliff_jump3.rs  cliff_robbed.rs  cliff_wait.rs  mod.rs
src/common/status/: AttackDash.rs  Catch.rs  Dash.rs  (+23 more)
src/controls/: consts.rs  controls_2.rs  ext.rs  mod.rs  modules.rs  offsets.rs  singletons.rs  util.rs
src/cpu/: mod.rs
src/duckhunt/: frame.rs
src/falco/: frame.rs  mod.rs
src/fox/: frame.rs  mod.rs  status.rs
src/ike/: frame.rs  mod.rs
src/roy/: mod.rs
src/samus/: frame.rs  mod.rs
src/template/: mod.rs
src/util/: mod.rs
src/wiifit/: frame.rs  mod.rs
src/wolf/: frame.rs  mod.rs
(+42 files in other folders)
