[package]
name = "ultimate_plus"
version = "0.1.0"
authors = ["sawagi"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
interpolation = "0.2.0"
once_cell = "1.18"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
